<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triggar</string>
    <string name="hello_world">Enable detect WIFI change</string>
    <string name="action_settings">Settings</string>
    <string name="new_profile">新增设置</string>
    <string name="button">Start Service</string>
    <string name="alarm_action">Play Sound</string>
    <string name="bluetooth_action">设定蓝牙</string>
    <string name="brightness_action">Set Brightness</string>
    <string name="music_action">Music</string>
    <string name="volume_action">Set Volume</string>
    <string name="wifi_action">Set Wifi</string>
    <string name="title_activity_new_profile">NewProfileActivity</string>
    <string name="profile_name">设置名称</string>
    <string name="triggers">触发</string>
    <string name="airplane_check">飞行模式</string>
    <string name="wifi_check">无线网络</string>
    <string name="bluetooth_check">蓝牙连接</string>
    <string name="battery_check">电量：低</string>
    <string name="headset_check">耳机：插入</string>
    <string name="power_check">充电模式</string>
    <string name="actions">动作设置</string>
    <string name="cancel">取消</string>
    <string name="alarm_action_name">声音提示</string>
    <string name="bluetooth_action_name">蓝牙设置</string>
    <string name="brightness_action_name">亮度设置</string>
    <string name="music_action_name">音乐播放</string>
    <string name="volume_action_name">音量设置</string>
    <string name="wifi_action_name">无线网络</string>
    <string name="action_create_new_profile">新增</string>
    <string name="action_new_profile_cancel">取消</string>
    <string name="delete_profile">刪除 </string>
    <string name="confirm">確定</string>


</resources>
